--- a/kailasantiago.html
+++ b/kailasantiago.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <style></style>
     <title>Kaila Santiago</title>
@@ -124,3 +125,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </body>
+</html>
