--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <head>
-    <style></style>
-    <title>Kaila Santiago</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    
+    <script defer src="js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <section class="intro">
-        <div class="w-layout-blockcontainer container w-container">
-            ::before
-            <div class="w-row">
-                ::before
-                <div class="colummn w-col w-col-6">
+    <nav class="navbar navbar-expand-lg custom-bg-nav">
+        <a class="navbar-brand" href="#">Kaila Santiago</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="nav/about-me.html">About Me</a>
+                <a class="nav-item nav-link" href="nav/portfolio.html">Portfolio</a>
+            </div>
+        </div>
+    </nav>
+    <section class="intro dark-bg-text">
+        <div class="container">
+            <div class="row ">
+                <div class="col left-intro">
                     <h1 id="greeting">
-                        "Hello, "
+                        Hello, 
                         <br>
-                        "I'm Kaila."
+                        I'm Kaila.
                     </h1>
-                    <h3 class="dark-bg-sub">Health Communicator</h3>
+                    <h3 id="tagline" class="dark-bg-sub">Health Communicator</h3>
                     <p class="dark-bg-text">
                         "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere."
                     </p>
-                    ::after
                 </div>
-            </div>
-        <div class="w-col w-col-6">
-            <div class="w-layout-blockcontainer image-container w-container">
-                ::before
-                <img id="photo" src="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-11 at 6.24.08 PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 88w, (max-width: 991px) 294px, 400px" srcset="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-11 at 6.24.08 PM.png 500w, /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-11 at 6.24.08 PM.png 672w" alt class="photo">
-                ::after
-            </div>
+                <div class="col right-intro">
+                    <div class="container" id="photo">
+                        <img src="pictures/lady.jpg" alt="Lady">
+                    </div>
+                </div>
+            </div>    
         </div>
-        ::after
-        </div>
-        ::after
     </section>
-    <section class="education">
-        <div class="w-layout-blockcontainer w-container">
-            ::before
+
+    <section class="education section-spacing">
+        <div class="container">
             <h1 class="light-bg-title">Education and Background</h1>
             <h3 class="light-bg-sub">(The short story)</h3>
             <p class="light-bg-text">In 2021, I returned to the Borough of Manhattan Community College to complete my associate degree in health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. I began to focus less on how my education was a means to an end, and more on how it could enable me to engage with health equity on a deeper level. This desire led me to the New York City College of Technology, where I currently study professional and technical writing.
@@ -45,84 +53,55 @@
             <br>
             "If you'd like to read more about my journey and personal experiences related to my career goals, click below!"
             </p>
-            <a href="about-me.html" class="long-story w-button">The long story</a>
-            ::after
+            <br>
+            <button type="button" class="light-bg-btn" onclick="location.href = 'nav/about-me.html'">The long story</button>
         </div>
     </section>
-    <section class="project-spotlight">
-        <div class="w-layout-blockcontainer w-container">
-            ::before
+
+    <section class="project-spotlight section-spacing">
+        <div class="container project-intro">
             <h1 class="dark-bg-title">Project Spotlight</h1>
             <h1 class="dark-bg-sub">Health communication projects</h1>
-            ::after
         </div>
-        <div class="w-layout-blockcontainer grid-container w-container">
-            ::before
-            <div class="grid">
-                <div id="w-node-_227fdcdd-69f6-f3f4-2b03-f689c2fa94b1-2519e104" class="w-layout-blockcontainer card w-container"
-                ::before
-                <div id="w-node-_805fb980-1d58-d8b5-231b-044047b27a8b-2519e104" class="w-layout-blockcontainer project-image w-container">
-                    ::before
-                    <a href="#" class="w-inlineblock">
-                        <img src="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png" width="417" id="w-node-cfe51ddd-1bad-c7db-87da-008e892d1ba3-2519e104" alt srcset="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 500w, 
-                        /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 800w, 
-                        /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1080w, 
-                        /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1680x, 
-                        /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1648w" sizes="(max-width: 479px) 42vw (max-width: 767px) 32vw, (max-width: 991px) 232px, 302.6640625px" class="image">
-                    </a>
-                    ::after
+        <div class="container grid-container">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text">Presentation and brochure designed in Canva</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Portfolio</button>
+                        </div>
+                    </div>
                 </div>
-                <p class="proj-desc"> Presentation and brochure educating patients on personal health records</p>
-                ::after
-            </div>
-            <div class="w-layout-blockcontainer card w-container">
-                ::before
-                <div class="w-layout-blockcontainer project-image w-container">
-                    ::before
-                    <a href="#" class="w-inlineblock">
-                    <img src="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png" width="417" id="w-node-cfe51ddd-1bad-c7db-87da-008e892d1ba3-2519e104" alt srcset="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 500w, 
-                    /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 800w, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1080w, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1680x, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1648w" sizes="(max-width: 479px) 42vw (max-width: 767px) 32vw, (max-width: 991px) 232px, 302.6640625px" class="image">
-                    </a>
-                    ::after
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text">Wonderful data visualization project that I will get around to uploading</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Portfolio</button>
+                        </div>
+                    </div>
                 </div>
-                <p class="proj-desc">
-                    "Infographic showing the relationship between chronic disease and cognitive decline"
-                </p>
-                ::after
-            </div>
-            <div class="w-layout-blockcontainer card w-container">
-                ::before
-                <div class="w-layout-blockcontainer project-image w-container">
-                    ::before
-                    <a href="#" class="w-inlineblock">
-                    <img src="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png" width="417" id="w-node-cfe51ddd-1bad-c7db-87da-008e892d1ba3-2519e104" alt srcset="/Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 500w, 
-                    /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 800w, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1080w, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1680x, 
-                     /Users/kailasantiago/Desktop/portfolio website/Screenshot 2024-06-08 at 11.04.53 AM.png 1648w" sizes="(max-width: 479px) 42vw (max-width: 767px) 32vw, (max-width: 991px) 232px, 302.6640625px" class="image">
-                    </a>
-                    ::after
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <div class="card-body">
+                          <p class="card-text">One pager that I have definitely made already</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Portfolio</button>
+                        </div>
+                    </div>
                 </div>
-                <p class="proj-desc">
-                    "Infographic showing the relationship between chronic disease and cognitive decline"
-                </p>
-                ::after
             </div>
-            ::after
         </div>
-        <div class="w-layout-blockcontainer w-container">
-            ::before<p class="dark-bg-text">"If you'd like to see more general portfolio pieces, click the button below."</p>
+        <div class="container spotlight-text">
+            <p class="dark-bg-text">If you'd like to see more general portfolio pieces, click the button below.</p>
             <br>
-        </p>
-        <a href="#" class="button w-button"> Portfolio</a>
-        ::after
+            </p>
+            <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Portfolio</button>
         </div>
     </section>
     <script src="myscript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
 </body>
 </html>
