--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="nav/about-me.html">About Me</a>
-                <a class="nav-item nav-link" href="nav/portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="nav/about-me.html">About me</a>
+                <a class="nav-item nav-link" href="nav/contact-me.html">Contact me</a>
             </div>
         </div>
     </nav>
-    <section class="intro dark-bg-text">
+    <section class="dark-bg-section dark-bg-text">
         <div class="container">
             <div class="row ">
                 <div class="col left-intro">
@@ -43,19 +43,19 @@
                         <h3 class="dark-bg-sub tagline-spacing">New Yorker.</h3>
                     </div>
                     <p class="text dark-bg-text">
-                        Welcome to my website! As a future health communicator, I wish to combine my love for technology and storytelling to make a difference. Thanks for taking the time to visit my site, and I hope to see you again soon!
+                        Welcome to my website! As an aspiring health communicator, I wish to combine my love for technology and storytelling to make a difference. 
                     </p>
                 </div>
                 <div class="col right-intro">
-                    <div class="container" id="photo">
-                        <img src="pictures/lady.jpg" alt="Lady">
+                    <div class="container" class="photo">
+                        <img id="headshot" src="pictures/lady.jpg" alt="Photo of Me">
                     </div>
                 </div>
             </div>    
         </div>
     </section>
 
-    <section class="education section-spacing">
+    <section class="light-bg-section section-spacing">
         <div class="container">
             <h1 class="section-title light-bg-title">Education and Background</h1>
             <p class="text text-spacing light-bg-text">In 2021, I returned to the Borough of Manhattan Community College to complete my associate degree in health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. I began to focus less on how my education was a means to an end, and more on how it could enable me to engage with health equity on a deeper level. This desire led me to the New York City College of Technology, where I currently study professional and technical writing.
@@ -79,8 +79,9 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
                         <div class="card-body">
-                          <p class="text card-text">Presentation and brochure designed in Canva</p>
-                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
+                            <h5 class="card-title light-bg-text">Personal Health Records</h5>
+                            <p class="text card-text">Created patient education materials across three different formats with consistent branding</p>
+                            <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
                         </div>
                     </div>
                 </div>
@@ -88,27 +89,29 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
                         <div class="card-body">
-                          <p class="text card-text">Wonderful data visualization project that I will get around to uploading</p>
+                            <h5 class="card-title light-bg-text">HIV and AIDS 2015-2018</h5>
+                          <p class="text card-text">Tableau dashboard displaying data trends in HIV and AIDS diagnoses from 2015-2019</p>
                           <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <img class="card-img-top" src="pictures/prospect-card-image.png" alt="Card image cap">
                         <div class="card-body">
-                          <p class="text card-text">One pager that I have definitely made already</p>
-                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
+                            <h5 class="card-title light-bg-text">The Need You Know It Is A Letting Light</h5>
+                          <p class="text card-text">Revised website content to enhance clarity and coherence through a detailed line-by-line rewrite</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'park-proj.html'">Check it out</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container spotlight-text">
-            <p class="text dark-bg-text">To see more general portfolio pieces,</p>
+            <p class="text dark-bg-text">Thank you for taking the time to view my projects! If you'd like to connect with me, or have suggestions on improving the site, let me know. I am always looking for ways to improve and expand my skillset.</p>
             <br>
             </p>
-            <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Portfolio</button>
+            <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Contact me</button>
         </div>
     </section>
     <script src="myscript.js"></script>
