--- a/index.html
+++ b/index.html
@@ -38,17 +38,13 @@
                         I'm Kaila.
                     </h1>
                     <div class="section-sub taglines">
-                        <h3 class="dark-bg-sub tagline-spacing">Professional and Technical Writer.</h3>
-                        <h3 class="dark-bg-sub tagline-spacing">Amateur Web Developer.</h3>
-                        <h3 class="dark-bg-sub tagline-spacing">New Yorker.</h3>
+                        <h3 class="dark-bg-sub tagline-spacing">Professional and Technical Writer</h3>
                     </div>
-                    <p class="text dark-bg-text">
-                        Welcome to my website! As an aspiring health communicator, I wish to combine my love for technology and storytelling to make a difference. 
-                    </p>
+                    <p class="text text-spacing dark-bg-text">Welcome to my personal website! As an aspiring health communicator, I wish to combine my interest in techology and love for storytelling to make a difference.</p>
                 </div>
                 <div class="col right-intro">
-                    <div class="container" class="photo">
-                        <img id="headshot" src="pictures/lady.jpg" alt="Photo of Me">
+                    <div class="photo">
+                        <img src="pictures/lady.jpg" alt="Photo of Me">
                     </div>
                 </div>
             </div>    
@@ -58,13 +54,11 @@
     <section class="light-bg-section section-spacing">
         <div class="container">
             <h1 class="section-title light-bg-title">Education and Background</h1>
-            <p class="text text-spacing light-bg-text">In 2021, I returned to the Borough of Manhattan Community College to complete my associate degree in health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. I began to focus less on how my education was a means to an end, and more on how it could enable me to engage with health equity on a deeper level. This desire led me to the New York City College of Technology, where I currently study professional and technical writing.
-            <br>
-            <br>
-            If you're interested in reading more about my journey and personal experiences related to my career goals, click below!
-            </p>
-            <br>
-            <button type="button" class="light-bg-btn" onclick="location.href = 'nav/about-me.html'">About me</button>
+            <p class="text text-spacing light-bg-text">In 2021, I returned to the Borough of Manhattan Community College to complete my associate degree in health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. I began to focus less on how my education was a means to an end, and more on how it could enable me to engage with health equity on a deeper level. This desire led me to the New York City College of Technology, where I currently study professional and technical writing.</p>
+            <p class="text text-spacing light-bg-text">If you're interested in reading more about my journey and personal experiences related to my career goals, click below!</p>
+            <div class="button-spacing">
+                <button type="button" class="light-bg-btn" onclick="location.href = 'nav/about-me.html'">About me</button>
+            </div>
         </div>
     </section>
 
@@ -76,27 +70,17 @@
         <div class="container grid-container">
             <div class="row">
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                    <div class="card card-home" style="width: 18rem;">
+                        <img class="card-img-top" src="pictures/pg1-brochure.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title light-bg-text">Personal Health Records</h5>
-                            <p class="text card-text">Created patient education materials across three different formats with consistent branding</p>
-                            <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
+                            <h5 class="card-title light-bg-text">Own Your Health Information</h5>
+                            <p class="text card-text">Created presentation and brochure about personal health records with consistent branding</p>
+                            <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'pers-rec-proj.html'">Check it out</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title light-bg-text">HIV and AIDS 2015-2018</h5>
-                          <p class="text card-text">Tableau dashboard displaying data trends in HIV and AIDS diagnoses from 2015-2019</p>
-                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card card-home" style="width: 18rem;">
                         <img class="card-img-top" src="pictures/prospect-card-image.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title light-bg-text">The Need You Know It Is A Letting Light</h5>
@@ -105,13 +89,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="col">
+                    <div class="card card-home" style="width: 18rem;">
+                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title light-bg-text">Coming Soon</h5>
+                          <p class="text card-text">Tableau dashboard displaying data trends across New York City in HIV and AIDS diagnoses from 2015-2019</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="container spotlight-text">
-            <p class="text dark-bg-text">Thank you for taking the time to view my projects! If you'd like to connect with me, or have suggestions on improving the site, let me know. I am always looking for ways to improve and expand my skillset.</p>
-            <br>
-            </p>
-            <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Contact me</button>
+        <div class="container  spotlight-text">
+            <p class="text text-spacing dark-bg-text">Thank you for taking the time to view my projects! If you would like to connect with me, click below!</p>
+            <div class="button-spacing">
+                <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Contact me</button>
+            </div>
         </div>
     </section>
     <script src="myscript.js"></script>
