--- a/park-proj.html
+++ b/park-proj.html
@@ -35,44 +35,98 @@
 
   <section class="dark-bg-section section-spacing">
     <div class="container img-spacing">
-      <h1 class="section-title dark-bg-title">The Need You Know It Is a Letting Light</h1>
-      <h3 class="section-sub dark-bg-sub"><b>Skills Exercised: Copyediting, Rewriting, Proofreading, Grammar Conventions</b></h3>
-      <p class="text text-spacing dark-bg-text"><b>Goal: </b>To revise the event description for  <a class="web-links"
+      <h1 class="section-title dark-bg-title">Project Overview</h1>
+      <h3 class="section-sub dark-bg-sub"><b>Skills Exercised: Copyediting, Rewriting, Proofreading, Grammar
+          Conventions</b></h3>
+      <p class="text text-spacing dark-bg-text"><b>Goal: </b>To revise the event description for <a class="web-links"
           href="https://www.prospectpark.org/event/the-need-you-know-it-is-a-letting-light/">"The Need You Know It Is a
-          Letting Light"</a> on the Prospect Park Alliance website to improve clarity, voice, and flow without compromising the intended message.</p>
-      <p class=" text text-spacing dark-bg-text">The first paragraph provides general information on the installation, while the next describes the piece and it's deeper messsage. Below are before and after images of the revised content. To create the after image, I used chrome developer tools to edit the text on the website.</p>
-      <div class="before-after">
-        <div class="row">
-          <div class="col">
-            <h3 class="section-sub dark-bg-sub">Before</h3>
-            <br>
-            <img class="proj-img" src="pictures/prospect-park-before.png">
-          </div>
-          <div class="col">
-            <h3 class="section-sub dark-bg-sub">After</h3>
-            <br>
-            <img class="proj-img" src="pictures/prospect-park-after.png">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container center-content text-container">
-      <p class="text dark-bg-text"> To complete this project I assessed each sentence to identify:</p>
+          Letting Light"</a> on the Prospect Park Alliance website to improve clarity, voice, and flow without
+        compromising the intended message.</p>
+      <p class=" text text-spacing dark-bg-text"><b>Background:</b> This project was a part of my final in my
+        Professioal Editing and Revising course. To complete this project I assessed each sentence to identify:</p>
       <ul class="text dark-bg-text">
         <li>Sentence type (simple, compound, complex, compound-complex)</li>
         <li>Verbs (tense, active/passive, strength)</li>
         <li>Sentence structure</li>
       </ul>
-      <p class="text dark-bg-text">In my assessment, I found that some sentences were overly complex, making it difficult to follow main ideas. Out of the six total sentences, I copyedited five. In the following section, I include a
+      <p class="text dark-bg-text">In my assessment, I found that some sentences were overly complex, making it
+        difficult to follow main ideas. Out of the six total sentences, I copyedited five. In the following section, I
+        include a
         side-by-side comparison of each sentence and a breakdown of changes made. </p>
     </div>
   </section>
-
-  <section class="light-bg-section section-spacing">
-    <div class="container text light-bg-text proj-page-spacing">
-      <h1 class="section-title light-bg-title">Sentence-by-Sentence Breakdown</h1>
+  <section>
+    <div class="light-bg-section section-spacing">
+      <div class="container">
+      <h1 class="section-title light-bg-title">Completed Project</h1>
+      <p class="text text-spacing light-bg-text">The first paragraph provides general information on the installation,
+        while the next describes the piece and it's deeper messsage. Below are before and after images of the revised
+        content. To create the after image, I used chrome developer tools to edit the text on the website.</p>
+      <div class="container before-after">
+        <div class="row">
+          <div class="col">
+            <h3 class="section-sub light-bg-sub">Before</h3>
+            <img class="proj-img" src="pictures/prospect-park-before.png">
+          </div>
+          <div class="col">
+            <h3 class="section-sub light-bg-sub">After</h3>
+            <img class="proj-img" src="pictures/prospect-park-after.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  <section class="dark-bg-section section-spacing">
+    <div class="container text dark-bg-text proj-page-spacing">
+      <h1 class="section-title dark-bg-title">Sentence-by-Sentence Breakdown</h1>
       <br>
-      <h3 class="section-sub light-bg-sub">Sentence 1</h3>
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Collapsible Group Item #1
+              </button>
+            </h5>
+          </div>
+      
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Collapsible Group Item #2
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Collapsible Group Item #3
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
+      </div>
+      <h3 class="section-sub dark-bg-sub">Sentence 1</h3>
       <div class="row">
         <div class="col">
           <p>BRIC and Prospect Park Alliance in partnership with NYC Parks’ Art in the Parks Program present a new
@@ -84,7 +138,7 @@
           </p>
         </div>
       </div>
-      <ol class="text light-bg-text">
+      <ol class="text dark-bg-text">
         <li>Moved "in partnership" to the beginning of the sentence to improve flow and clarity</li>
         <li>Changed "present" to "unveil" to make the sentence more dynamic and exciting</li>
         <li>Removed "at Prospect Park" to avoid sounding repetitive, since the website makes the location of the art
@@ -92,8 +146,8 @@
       </ol>
     </div>
 
-    <div class="container text light-bg-text proj-page-spacing">
-      <h3 class="section-sub light-bg-sub">Sentence 2</h3>
+    <div class="container text dark-bg-text proj-page-spacing">
+      <h3 class="section-sub dark-bg-sub">Sentence 2</h3>
       <div class="row">
         <div class="col">
           <p>The Need You Know It Is A Letting Light is a set of three abstract wooden sculptures and an accompanying
@@ -108,7 +162,7 @@
         </div>
       </div>
 
-      <ol class="text light-bg-text">
+      <ol class="text dark-bg-text">
         <li>Split into two sentences (simple and complex) so general description is seperate from the artist's vision to
           improve clarity</li>
         <li>Removed "accompanying" and changed verbs "exploration" and "communication" to their present tense for a more
@@ -117,8 +171,8 @@
           work for additional context and improved readability</li>
       </ol>
     </div>
-    <div class="container text light-bg-text proj-page-spacing">
-      <h3 class="section-sub light-bg-sub">Sentence 3</h3>
+    <div class="container text dark-bg-text proj-page-spacing">
+      <h3 class="section-sub dark-bg-sub">Sentence 3</h3>
       <div class="row">
         <div class="col">
           <p>The mural’s colors of red, yellow, and green are sourced from the natural beauty of Prospect Park, and
@@ -133,7 +187,7 @@
         </div>
       </div>
 
-      <ol class="text light-bg-text">
+      <ol class="text dark-bg-text">
         <li>Split into two sentences (simple and complex-compound) for readability and clarity</li>
         <li>Removed list of colors from the first sentence and changed wording to "park visitors" for improved clarity
         </li>
@@ -143,8 +197,8 @@
           bandshell and mural clearer</li>
       </ol>
     </div>
-    <div class="container text light-bg-text proj-page-spacing">
-      <h3 class="section-sub light-bg-sub">Sentence 4</h3>
+    <div class="container text dark-bg-text proj-page-spacing">
+      <h3 class="section-sub dark-bg-sub">Sentence 4</h3>
       <div class="row">
         <div class="col">
           <p>The repurposed wood sculptures respond to the mural’s colors, expressing warm-hued shadows that appear to
@@ -156,7 +210,7 @@
         </div>
       </div>
 
-      <ol class="text light-bg-text">
+      <ol class="text dark-bg-text">
         <li>Split into two sentences (simple and complex) to properly introduce the wood sculptures and the purpose they
           serve
         </li>
@@ -165,8 +219,8 @@
           "interact" that make connection between mural and wooden sculptures clearer</li>
       </ol>
     </div>
-    <div class="container text light-bg-text proj-page-spacing">
-      <h3 class="section-sub light-bg-sub">Sentence 5</h3>
+    <div class="container text dark-bg-text proj-page-spacing">
+      <h3 class="section-sub dark-bg-sub">Sentence 5</h3>
       <div class="row">
         <div class="col">
           <p>The sculptures’ material communicate their singularity through wear-- a crooked nail, an empty hole, a worn
@@ -180,7 +234,7 @@
         </div>
       </div>
 
-      <ol class="text light-bg-text">
+      <ol class="text dark-bg-text">
         <li>Split into two sentences (complex and simple) to make the purpose of each piece individually and as a
           collective more clear</li>
         <li>Incorporated "repurposed" from previous sentence because here the materials are discussed more in-depth</li>
@@ -189,7 +243,8 @@
       </ol>
       <br>
       <br>
-      <button type="button" class="light-bg-btn text-spacing" onclick="location.href = 'nav/about-me.html'">Contact me</button>
+      <button type="button" class="dark-bg-btn text-spacing" onclick="location.href = 'nav/about-me.html'">Contact
+        me</button>
     </div>
   </section>
   <script src="myscript.js"></script>
