--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="nav/about-me.html">About me</a>
-                <a class="nav-item nav-link" href="nav/contact-me.html">Contact me</a>
             </div>
         </div>
     </nav>
@@ -40,11 +37,12 @@
                     <div class="section-sub taglines">
                         <h3 class="dark-bg-sub tagline-spacing">Professional and Technical Writer</h3>
                     </div>
-                    <p class="text text-spacing dark-bg-text">Welcome to my personal website! As an aspiring health communicator, I wish to combine my interest in techology and love for storytelling to make a difference.</p>
+                    <p class="text text-spacing dark-bg-text"> My goal is to promote systems that listen to, value, and respect all New Yorkers. Ultimately, I aspire to use my blend of specialized knowledge and interpersonal skills to serve the public. 
+                    </p>
                 </div>
                 <div class="col right-intro">
                     <div class="photo">
-                        <img src="pictures/lady.jpg" alt="Photo of Me">
+                        <img src="pictures/Photoroom_20240704_132632.JPG" alt="Photo of Me">
                     </div>
                 </div>
             </div>    
@@ -54,10 +52,9 @@
     <section class="light-bg-section section-spacing">
         <div class="container">
             <h1 class="section-title light-bg-title">Education and Background</h1>
-            <p class="text text-spacing light-bg-text">In 2021, I returned to the Borough of Manhattan Community College to complete my associate degree in health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. I began to focus less on how my education was a means to an end, and more on how it could enable me to engage with health equity on a deeper level. This desire led me to the New York City College of Technology, where I currently study professional and technical writing.</p>
-            <p class="text text-spacing light-bg-text">If you're interested in reading more about my journey and personal experiences related to my career goals, click below!</p>
+            <p class="text text-spacing light-bg-text">My journey began at the Borough of Manhattan Community College, where I studied health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. My education was no longer a means to an end, but a foundation to engage with health equity on a deeper level. This desire to drive positive change led me to the New York City College of Technology, where I currently study professional and technical writing.</p>
             <div class="button-spacing">
-                <button type="button" class="light-bg-btn" onclick="location.href = 'nav/about-me.html'">About me</button>
+                <button type="button" class="light-bg-btn" onclick="location.href = 'about-me.html'">Resume</button>
             </div>
         </div>
     </section>
@@ -65,7 +62,7 @@
     <section class="project-spotlight section-spacing">
         <div class="container project-intro">
             <h1 class="section-title dark-bg-title">Project Spotlight</h1>
-            <p class="text text-spacing dark-bg-text">Here are some of my favorite projects that I have worked on. From educational materials to data visualization, I am constantly pushing myself to use new tools, formats, and programs to create work that I am not only proud of, but excited about.</p>
+            <p class="text text-spacing dark-bg-text">Here are some of my favorite projects that I have worked on. I am constantly pushing myself to use new tools, formats, and programs to create work that I am not only proud of, but excited about.</p>
         </div>
         <div class="container grid-container">
             <div class="row">
@@ -83,7 +80,7 @@
                     <div class="card card-home" style="width: 18rem;">
                         <img class="card-img-top" src="pictures/prospect-card-image.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title light-bg-text">The Need You Know It Is A Letting Light</h5>
+                            <h5 class="card-title light-bg-text">Prospect Park Alliance Website</h5>
                           <p class="text card-text">Revised website content to enhance clarity and coherence through a detailed line-by-line rewrite</p>
                           <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'park-proj.html'">Check it out</button>
                         </div>
@@ -91,20 +88,20 @@
                 </div>
                 <div class="col">
                     <div class="card card-home" style="width: 18rem;">
-                        <img class="card-img-top" src="pictures/PHR.png" alt="Card image cap">
+                        <img class="card-img-top" src="pictures/work in progress.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title light-bg-text">Coming Soon</h5>
-                          <p class="text card-text">Tableau dashboard displaying data trends across New York City in HIV and AIDS diagnoses from 2015-2019</p>
-                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'nav/portfolio.html'">Check it out</button>
+                            <h5 class="card-title light-bg-text">Taking Control of Your Care</h5>
+                          <p class="text card-text">Handbook outlining patient rights, advice for navigating the healthcare system, and resources for support</p>
+                          <button type="button" class="card-btn light-bg-btn" onclick="location.href = 'taking-control-of-your-care.html'">Check it out</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container  spotlight-text">
-            <p class="text text-spacing dark-bg-text">Thank you for taking the time to view my projects! If you would like to connect with me, click below!</p>
+            <p class="text text-spacing dark-bg-text">Thank you for taking the time to view my projects. For writing samples, please contact me at kaila.santiago@mail.citytech.cuny.edu. I look forward to connecting with you!</p>
             <div class="button-spacing">
-                <button type="button" class="dark-bg-btn" onclick="location.href = 'nav/portfolio.html'">Contact me</button>
+                <button type="button" class="dark-bg-btn" onclick="location.href = '//wiry-cheek-6ec.notion.site/0dd410de0d334e21ae2ee02c474220da?v=d40841c4e04b486c84b79c8134a18eba'">Portfolio</button>
             </div>
         </div>
     </section>
