--- a/park-proj.html
+++ b/park-proj.html
@@ -19,17 +19,13 @@
 
 <body>
   <nav class="navbar navbar-expand-lg custom-bg-nav">
-    <a class="navbar-brand" href="#">Kaila Santiago</a>
+    <a class="navbar-brand" href="index.html">Return Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="nav/about-me.html">About me</a>
-        <a class="nav-item nav-link" href="nav/contact-me.html">Contact me</a>
-      </div>
     </div>
   </nav>
 
@@ -37,22 +33,20 @@
     <div class="container img-spacing">
       <h1 class="section-title dark-bg-title">Project Overview</h1>
       <h3 class="section-sub dark-bg-sub"><b>Skills Exercised: Copyediting, Rewriting, Proofreading, Grammar
-          Conventions</b></h3>
+          Conventions, Sentence Structure</b></h3>
       <p class="text text-spacing dark-bg-text"><b>Goal: </b>To revise the event description for <a class="web-links"
           href="https://www.prospectpark.org/event/the-need-you-know-it-is-a-letting-light/">"The Need You Know It Is a
           Letting Light"</a> on the Prospect Park Alliance website to improve clarity, voice, and flow without
         compromising the intended message.</p>
-      <p class=" text text-spacing dark-bg-text"><b>Background:</b> This project was a part of my final in my
-        Professioal Editing and Revising course. To complete this project I assessed each sentence to identify:</p>
+      <p class=" text text-spacing dark-bg-text"><b>Background:</b> This project was done for my
+        Professioal Editing and Revising course. To revise the art installation description, I assessed each sentence to identify:</p>
       <ul class="text dark-bg-text">
         <li>Sentence type (simple, compound, complex, compound-complex)</li>
         <li>Verbs (tense, active/passive, strength)</li>
         <li>Sentence structure</li>
       </ul>
-      <p class="text dark-bg-text">In my assessment, I found that some sentences were overly complex, making it
-        difficult to follow main ideas. Out of the six total sentences, I copyedited five. In the following section, I
-        include a
-        side-by-side comparison of each sentence and a breakdown of changes made. </p>
+      <p class="text dark-bg-text">In my assessment, I found that some sentences were overly complex, which made it
+        difficult to follow main ideas. Out of the six sentences, I copyedited five. This page includes the completed project, a side-by-side comparison of each sentence, and a breakdown of changes made. </p>
     </div>
   </section>
   <section>
@@ -80,171 +74,9 @@
   <section class="dark-bg-section section-spacing">
     <div class="container text dark-bg-text proj-page-spacing">
       <h1 class="section-title dark-bg-title">Sentence-by-Sentence Breakdown</h1>
-      <br>
-      <div id="accordion">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
-              </button>
-            </h5>
-          </div>
-      
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
-            </h5>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
-            </h5>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-      </div>
-      <h3 class="section-sub dark-bg-sub">Sentence 1</h3>
-      <div class="row">
-        <div class="col">
-          <p>BRIC and Prospect Park Alliance in partnership with NYC Parks’ Art in the Parks Program present a new
-            installation by Sarah E. Brook at the Lena Horne Bandshell at Prospect Park.</p>
-        </div>
-        <div class="col">
-          <p><b><u>In partnership with NYC Parks’ Art in the Parks program,</u></b> BRIC and Prospect Park Alliance
-            <b><u>unveil</u></b> a new installation by artist Sarah E. Brook at the Lena Horne Bandshell.
-          </p>
-        </div>
-      </div>
-      <ol class="text dark-bg-text">
-        <li>Moved "in partnership" to the beginning of the sentence to improve flow and clarity</li>
-        <li>Changed "present" to "unveil" to make the sentence more dynamic and exciting</li>
-        <li>Removed "at Prospect Park" to avoid sounding repetitive, since the website makes the location of the art
-          installation clear</li>
-      </ol>
-    </div>
-
-    <div class="container text dark-bg-text proj-page-spacing">
-      <h3 class="section-sub dark-bg-sub">Sentence 2</h3>
-      <div class="row">
-        <div class="col">
-          <p>The Need You Know It Is A Letting Light is a set of three abstract wooden sculptures and an accompanying
-            mural that expands the artist’s exploration of communication between external and internal psychic space.
-          </p>
-        </div>
-        <div class="col">
-          <p>The Need You Know It Is A Letting Light is a set of three abstract wooden sculptures and <b><u>a</u></b>
-            mural<b><u>. Both pieces</u></b> expand <u><b>on</u></b> the <u><b>overarching focus of the</u></b> artist‘s
-            <u><b>work: to explore how our</u></b> external and internal psychic space <u><b>communicate.</u></b>
-          </p>
-        </div>
-      </div>
-
-      <ol class="text dark-bg-text">
-        <li>Split into two sentences (simple and complex) so general description is seperate from the artist's vision to
-          improve clarity</li>
-        <li>Removed "accompanying" and changed verbs "exploration" and "communication" to their present tense for a more
-          active voice</li>
-        <li>Clarified that artist's work is being "expanded" on and added colon to highlight the focus of the artist's
-          work for additional context and improved readability</li>
-      </ol>
-    </div>
-    <div class="container text dark-bg-text proj-page-spacing">
-      <h3 class="section-sub dark-bg-sub">Sentence 3</h3>
-      <div class="row">
-        <div class="col">
-          <p>The mural’s colors of red, yellow, and green are sourced from the natural beauty of Prospect Park, and
-            bothdraws viewers in from the park and radiates out from the Bandshell and stage into the park, reflecting
-            thefunction of a bandshell to expand voices.</p>
-        </div>
-        <div class="col">
-          <p>The mural's <b><u>vibrant colors, inspired by</u></b> Prospect Park<b><u>'s natural beauty, capture the
-                attention of park visitors. Much like how the Bandshell directs sound from the stage into the park, the
-                mural</u></b> radiates out<u><b>wards; mirroring</u></b> the Bandshell's <u><b>power</u></b> to expand
-            voices.</p>
-        </div>
-      </div>
-
-      <ol class="text dark-bg-text">
-        <li>Split into two sentences (simple and complex-compound) for readability and clarity</li>
-        <li>Removed list of colors from the first sentence and changed wording to "park visitors" for improved clarity
-        </li>
-        <li>Removed to be verb "are sourced" and added stronger stronger, more appropiate verbs like "capture" and
-          "directs"</li>
-        <li>Used comparative phrase "much like" as the beginning of second sentence to make similarity between the
-          bandshell and mural clearer</li>
-      </ol>
-    </div>
-    <div class="container text dark-bg-text proj-page-spacing">
-      <h3 class="section-sub dark-bg-sub">Sentence 4</h3>
-      <div class="row">
-        <div class="col">
-          <p>The repurposed wood sculptures respond to the mural’s colors, expressing warm-hued shadows that appear to
-            be held within.</p>
-        </div>
-        <div class="col">
-          <p><b><u>In contrast to the mural, the wood sculptures express our inner world. When both pieces interact,
-                they reveal the</b></u> warm-hued shadows held within.</p>
-        </div>
-      </div>
-
-      <ol class="text dark-bg-text">
-        <li>Split into two sentences (simple and complex) to properly introduce the wood sculptures and the purpose they
-          serve
-        </li>
-        <li>Added transitional phrase "in contrast to" at the beginning of the sentence for flow</li>
-        <li>Removed "expressing" and "appear to be" for stronger, more active verbs like "express", "reveal", and
-          "interact" that make connection between mural and wooden sculptures clearer</li>
-      </ol>
-    </div>
-    <div class="container text dark-bg-text proj-page-spacing">
-      <h3 class="section-sub dark-bg-sub">Sentence 5</h3>
-      <div class="row">
-        <div class="col">
-          <p>The sculptures’ material communicate their singularity through wear-- a crooked nail, an empty hole, a worn
-            edge-- and in their gently leaning formation, the sculptures can be read as bodies supporting one another.
-          </p>
-        </div>
-        <div class="col">
-          <p><u><b>Crafted from repurposed wood, each</b></u> sculpture communicate<u><b>s it‘s</b></u> singularity
-            through wear— a crooked nail, an empty hole, a worn edge. <b><u>Nevertheless, they</u></b>
-            gentl<u><b>y</b></u> lean <u><b>on</b></u> one another <u><b>for support.</b></u></p>
-        </div>
-      </div>
-
-      <ol class="text dark-bg-text">
-        <li>Split into two sentences (complex and simple) to make the purpose of each piece individually and as a
-          collective more clear</li>
-        <li>Incorporated "repurposed" from previous sentence because here the materials are discussed more in-depth</li>
-        <li>Began second sentence with the signpost "nevertheless" to introduce a new, contrasting idea</li>
-        <li>Removed interpretation of art installation at the end to leave room for interpretation for readers</li>
-      </ol>
-      <br>
-      <br>
-      <button type="button" class="dark-bg-btn text-spacing" onclick="location.href = 'nav/about-me.html'">Contact
-        me</button>
+      <object class="pdf-spacing" data="pdf/Prospect Park Project.pdf" type="application/pdf" width="100%" height="720px">
+      </object>
+      <button type="button" class="button-spacing dark-bg-btn" onclick="location.href = '//wiry-cheek-6ec.notion.site/0dd410de0d334e21ae2ee02c474220da?v=d40841c4e04b486c84b79c8134a18eba'">Portfolio</button>
     </div>
   </section>
   <script src="myscript.js"></script>
