updated proj spotlight text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="container  spotlight-text">
-            <p class="text text-spacing dark-bg-text">Thank you for taking the time to view my projects. For writing samples, please contact me at kaila.santiago@mail.citytech.cuny.edu. I look forward to connecting with you!</p>
+            <p class="text text-spacing dark-bg-text">Thank you for taking the time to view my projects. For writing samples, please contact me at kaila.santiago@mail.citytech.cuny.edu, or click below to view my portfolio on Notion. Thank you again, and I look forward to connecting with you.</p>
             <div class="button-spacing">
                 <button type="button" class="dark-bg-btn" onclick="location.href = '//wiry-cheek-6ec.notion.site/0dd410de0d334e21ae2ee02c474220da?v=d40841c4e04b486c84b79c8134a18eba'">Portfolio</button>
             </div>
